Product landing page

--- a/Ui-module/index2.html
+++ b/Ui-module/index2.html
@@ -30,8 +30,10 @@
   </nav>
 </header>
 </div>
-  
-  <div>
+
+  <div id="maintodiv">
+
+  <div id="form-div">
     <form 
      action="https://www.freecodecamp.com/email-submit" id="form">
       <label for="email-label">Get React Developers Group Link</label>
@@ -68,6 +70,6 @@
       <span>Copyright 2016, Original </span>
     </footer>
 </div>
-    
+</div>
 </body>
 </html>
